--- a/app/views/admin/contents/index.html.erb
+++ b/app/views/admin/contents/index.html.erb
@@ -35,7 +35,7 @@
   </tbody>
 </table>
 
-<%= will_paginate(@contents, :prev => "&#171; #{t('previous')}", :next => "#{t('next')} &#187;") %>
+<%= paginate(@contents) %>
 
 <% content_for :sidebar do %>
 
